# vlc-qt

./: CMakeLists.txt  README.md
cmake/: FindLIBVLC.cmake
examples/: CMakeLists.txt
examples/common/: Config.cpp  Config.h  common.h
examples/common/powermanagement/: powermanagement_x11.cpp
examples/player/: EventFilter.cpp  EventFilter.h  MainWindow.cpp  MainWindow.h  StatisticsView.cpp  StatisticsView.h  main.cpp
examples/player/config/: AVFilterConfigPage.cpp  DecoderConfigPage.cpp  VideoEQConfigPage.cpp
src/core/: Instance.cpp  Instance.h  Media.cpp  Media.h  MediaList.cpp  MediaList.h  MediaListPlayer.cpp  MediaListPlayer.h  MediaPlayer.cpp  MediaPlayer.h
src/qml/: QmlPlayer.cpp  QmlPlayer.h  QmlVideoPlayer.cpp  QmlVideoPlayer.h
src/widgets/: CMakeLists.txt  WidgetVideo.cpp
tests/common/: TestsCommon.cpp  TestsCommon.h
tests/core/: CMakeLists.txt  TestMedia.cpp  TestMediaList.cpp  TestMetaManager.cpp
tests/widgets/: TestPlayer.cpp
tests/widgets/ui/: Player.cpp  Player.h
